adding rough text for network results paragraph and discussion / application to trophic systems

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -31,7 +31,7 @@
 
 \onehalfspacing % line spacing 1.5 for thesis formatting
 
-\title{\large Estimating interaction matrices for diverse, horizontal systems}
+\title{\large Estimating interaction matrices from performance data for diverse systems}
 
 
 
@@ -74,7 +74,7 @@ Number of words - main text: 5608\\
 Number of references: 85\\
 
 \noindent
-\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, non-trophic, interaction strength.  
+\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, per-capita interactions, annual plants.  
 
 \section*{Author contributions}
 
@@ -115,7 +115,7 @@ Data will be submitted to Dryad upon publication.
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both realised and unrealised interactions, \textbf{something here}. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
+    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both realised and unrealised interactions, \textbf{from measures of performance in the absence and presence of different interaction partners}. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
 
     % Mayve remove the last sentence???
 
@@ -124,7 +124,7 @@ Data will be submitted to Dryad upon publication.
 \paragraph{} 
 \textbf{
 We developed a joing modeling framework to estimate pairwise interactions in diverse systems from measures of element performance under varying abundances of different interaction partners. This framework benefits from several distinguishing features including the ability to estimate both \textit{realised} interactions (direct estimates from the observed data), and \textit{unrealised} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we then define and identify which interactions are realised and which are not (\ref{meth:id_params}). Realised interactions are estimated with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}). Independantly to this model, we also describe a response-impact model (\ref{meth:rim}) where elements have a singular effect on neighbours, and a singular response. This allows us to estimate unrealised interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.}
-Taken together, realised and unrealised interaction estimates are then used to populate community interaction matrices for the system that describes the indivudal effects of all interaction partners on the performance of all focal elements. 
+Taken together, realised and unrealised interaction estimates are then used to populate community interaction matrices for the system that describes the effects of all interaction partners on the performance of all focal elements. 
 
 %, i.e. when elements are observed to co-occur enough times and at varying densities such that the effect of one element on the performance of the other can be reliably estimated via regression. Conversely, the interaction effect of element $j$ on element $i$ is is deemed unrealised when there are none or too few measures of the performance of $i$ in the presence of varying densities of $j$. 
 
@@ -157,13 +157,13 @@ Taken together, realised and unrealised interaction estimates are then used to p
         Realised interactions are quantified by regressing the performance of an element  - a species, population or any chosen set of replicated units - against the abundance and identity of other interacting elements in a neighbour-density dependent model (NDDM).  Increases or decreases in an overall element's performance can thus be attributed to the abundance of its interaction partners. 
 
         \paragraph{}
-        We implement a neighbour density-dependent model to each focal element or species $i$ which regresses the identity and abundance of elements $j$ ($j = 1, ..., k$) against the measured proxy for performance $p_{i}$ through a link function $f$:
+        We implement a neighbour density-dependent model to each focal element $i$ which regresses the identity and abundance of elements $j$ ($j = 1, ..., k$) against the measured proxy for performance $p_{i}$ through a link function $f$:
         \begin{equation}
         f(p_{i}) = \beta_{i0} - \sum_{j=1}^{s} \beta_{ij} N_{j}
         \label{nddm}
         \end{equation}
         \textbf{Note that $p_i$ refers to the subset of all individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $p_{d_i}$ ?]]}
-        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal element (competitive) or beneficial (facilitative). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative. 
+        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$. \textbf{Furthermore, the equation above places no restrictions on the sign of $\beta_{ij}$: interactions can be harmful to the focal element (competitive) or beneficial (facilitative). The negative sign in front of $\beta_{ij}$ does, however, mean that positive interaction estimates should be interpreted as competitive and negative estimates as facilitative.}
 
         \paragraph{}
         This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $p_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
@@ -252,7 +252,8 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \subsection{Model fitting}
 
         \paragraph{}        
-        The NDDM (Eq. \ref{nddm}) and the RIM (Eq. \ref{rim}) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify realised interactions which are then fed into the RIM. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. From the model file, only the link function for $p_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_i$) but a different distribution may be more appropriate when using other measures of performance.   
+        The NDDM (Eq. \ref{nddm}) and the RIM (Eq. \ref{rim}) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to discriminate between realised and unrealised interactions. We provide a working example of the STAN code used to specify and set this model to the case study below in the Supplementary Methods \ref{SI:modelcode}, as well as a downloadable zip folder which contains the necessary STAN model code, R script and functions to run the model on a simulated dataset. \textbf{The most up-to-date versions of the code and data used for this manuscript is also available on our public  github repository: [insert link here].}
+        From the model file, only the link function for $p_i$ and it's parameterisation need to be modified in order to apply it to a differently-distributed dataset. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($p_i$) but a different distribution may be more appropriate when using other measures of performance.   
 
         \paragraph{}
         Bayesian models are often run on multiple MCMC chains. In our case, we deliberately run only one MCMC chain because the latent variables in our model ($r_i$ and $e_j$) are invariant to sign switching. This means that different MCMC chains can return coefficient values which are of the same magnitude, but opposing signs. As with the boral function in the boral R package \parencite{Hui2021} and the MCMCfactanal function in the MCMCpack package \parencite{Martin2011}, we run one chain only to simplify issues with checking chain convergence and computing parameter estimates which arise from sign-switching. Though many MCMC convergence diagnostics require multiple chains to be computed, single chain convergence can be assessed with the Geweke convergence statistic \parencite{Geweke1992}, for example with the geweke.diag() function from the coda package \parencite{Plummer2006}, as well as visually checking traceplots.
@@ -292,7 +293,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
 
      \paragraph{}
-     We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. 
+     We applied the same data to the cooccur package in R \parencite{Griffith2016} to build a spatial-association network, a common alternative to inferring interactions in diverse systems. Species associations (Figure \ref{fig:netwks}.C) were all negative (competitive), symmetrical, and the association between a species and itself (the equivalent to intraspecific interactions) cannot be estimated. Together, these aspects make species association networks qualitatively different to the interaction networks returned by our framework. \textbf{We were unfortunately unable to compare our results to other methods for estimating such a diverse set of plant-plant interactions because there are currently none other that we are aware of.}
 
 
     \subsection{Examples of ecological applications}
@@ -310,18 +311,14 @@ Taken together, realised and unrealised interaction estimates are then used to p
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textbf{Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). PEAI interacts weakly with neighbours, whether it is competing or facilitative, and ARCA does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.}
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textbf{Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). \textit{P. aroides} interacts weakly with neighbours, whether it is competing or facilitative, and \textit{A. calendula} does compete but still lies below the median sum of competitive effects for the community, it's overall competitive effect being largely driven by weak facilitation. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. The results from our case study suggest that here at least, the effects of exotic species on native species are rather complex and species-dependent.}
 
     
     \subsection{Network results}
 
-    % \paragraph{}
-    % Potentially a short paragraph on 'network' results (weighted connectance, transitivity) so that I can later discuss how the scaling + network theory can allow us to link network patterns to diversity / stability etc. Basically scaling into per-capita is necessary if we want to make inferrences about diversity maintenance or stability. \\
-    % We calculated .... 
-
-    We calculate weighted connectance and transitivity.....
-
-
+    \paragraph{}
+    Quantifying species-species interaction matrices also allows us to measure network properties for the system at hand, as is commonly done for food-web, plant-pollinator, and parasite-host interactions networks \cite{}. Though many of these metrics depend on sparse matrices  (matrices with many 0's or empty entriblees), .. we were still able to calculate weighted connectance and transitivity.....
+    
     
 
 \section{Discussion}
@@ -336,6 +333,11 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
     \paragraph{}
     Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of abundance, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g. \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g. \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+
+    \paragraph{}
+    \textbf{
+    Though our method was developped for and tested on non-trophic systems, where interactions often cannot be deduced by other means than measuring performance, it should be applicable to trophic systems too. There are notable differences of course, chiefly our method assumes all elements have the potential to interact with one another. This is obviously not always the case for trophic systems, but you can set 'impossible' interactions to 0. Though hwe have not yet tested this, we welcome any tests of this method to trophic system data.
+    [[Rewrite nicely, Could go somewhere else]]}
 
     \paragraph{}
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
