formatting the abstract

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -2,7 +2,6 @@
     \documentclass[a4,12pt]{article}
 
 	
-  %  \usepackage{titlesec} % Allows customization of titles
     \usepackage{authblk} % For multiple authors
     \usepackage{amsmath}
     \usepackage[utf8]{inputenc}
@@ -13,7 +12,7 @@
     \usepackage[skip=2.5\baselineskip]{caption} % to give more space between figs and captions
     \usepackage{listings} % allows me to insert code 
     \usepackage{pdfpages}
-    \usepackage[margin=20mm]{geometry} % set exact margins for thesis
+    \usepackage[margin=20mm]{geometry} % set exact margins 
     \usepackage{caption} % allows doublespacing of captions
     \captionsetup{font=doublespacing}
 
@@ -29,7 +28,7 @@
     \usepackage{changepage}
     \usepackage[table,xcdraw]{xcolor}
 
-\onehalfspacing % line spacing 1.5 for thesis formatting
+\doublespacing 
 
 \title{\large Estimating interaction matrices from performance data for diverse systems}
 
@@ -59,8 +58,6 @@
 \textbf{Corresponding Author:} Malyon D. Bimler, email: malyonbimler@gmail.com \\ %, ph: +64 481941634\\
 
 
-% \noindent
-% Manuscript submitted for consideration as a \textbf{Method} article.
 
 
 \noindent
@@ -86,16 +83,18 @@ Data will be submitted to Dryad upon publication.
 
 \newpage
 
-% \setcounter{secnumdepth}{3} % sections are level 1
 
 \linenumbers
 
-% Submit to Ecology Letters as a Method
-
-    \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates the strength of realised and unrealised interactions in diverse horizontal systems, using measures of element performance in the presence of varying densities of their potential interaction partners. The resulting interaction matrices can include positive and negative effects, the effect of an element on itself, and are non-symmetrical. The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
-
-
+\section*{Abstract}
+    
+    \begin{enumerate}
+    \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
+    \item{We present a novel modelling framework which estimates the strength of realised and unrealised interactions in diverse horizontal systems, using measures of element performance in the presence of varying densities of their potential interaction partners.}
+    \item{The resulting interaction matrices can include positive and negative effects, the effect of an element on itself, and are non-symmetrical.} 
+    \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, with potential applications of this framework extending well beyond plant community ecology.}
+\end{enumerate}
+% Can lengthen abstract for MEE
 
 \section{Introduction}
 
