checking notation and language of methods 2.1

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -114,16 +114,16 @@ Data will be submitted to Dryad upon publication.
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both realised and unrealised interactions, \textbf{from measures of performance in the absence and presence of different interaction partners}. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
+    We present a general framework to estimate interactions in highly diverse horizontal systems. We specify a joint model which allows us to estimate both realised and unrealised interactions, from measures of performance in the absence and presence of different interaction partners. We present the model code in STAN, a Bayesian statistical language which is flexible to a high number of parameters, and apply it to an ecological case study of an annual wildflower community in Western Australia. Using this  dataset, we estimate positive and negative interactions between 22 focal species and 52 neighbouring species and illustrate how to couch these results into established models of population dynamics. This step further widens the potential applications of this novel framework by accounting for other demographic processes affecting species or element performance, and thus system dynamics. We show the benefits of this approach by comparing a range of findings from our case study to the results derived from a spatial-abundance association network, a common alternative to estimating interactions in ecology. We suggest potential applications in species management and conservation that make use of the rich information provided by horizontal interaction networks as developed using our novel framework.
 
-    % Mayve remove the last sentence???
 
 \section{Methods}
 
 \paragraph{} 
-\textbf{
-We developed a joing modeling framework to estimate pairwise interactions in diverse systems from measures of element performance under varying abundances of different interaction partners. This framework benefits from several distinguishing features including the ability to estimate both \textit{realised} interactions (direct estimates from the observed data) and \textit{unrealised} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we then define and identify which interactions are realised and which are not (\ref{meth:id_params}). Realised interactions are estimated with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}). Independently to this model, we also describe a response-impact model (\ref{meth:rim}) where elements have a singular effect on neighbours, and a singular response. This allows us to estimate unrealised interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.}
-Taken together, realised and unrealised interaction estimates are then used to populate community interaction matrices for the system that describes the effects of all interaction partners on the performance of all focal elements. 
+We developed a joing modeling framework to estimate pairwise interactions in diverse systems from measures of species performance under varying abundances of different interaction partners. This framework benefits from several distinguishing features including the ability to estimate both \textit{identifiable} interactions (direct estimates from the observed data) and \textit{unidentifiable} interactions (when observations are missing or too few). After describing the required data (\ref{meth:data} below), we estimate identifiable interactions with a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}).
+% edit below
+we then define and select which interactions are identifiable and which are not (\ref{meth:id_params}). Independently to this model, we also describe a response-impact model (\ref{meth:rim}) where species have a singular effect on neighbours, and a singular response. This allows us to estimate unidentifiable interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.
+Taken together, identifiable and unidentifiable interaction estimates are then used to populate community interaction matrices for the system that describes the effects of all interaction partners on the performance of all focal species. 
 
 %, i.e. when elements are observed to co-occur enough times and at varying densities such that the effect of one element on the performance of the other can be reliably estimated via regression. Conversely, the interaction effect of element $j$ on element $i$ is is deemed unrealised when there are none or too few measures of the performance of $i$ in the presence of varying densities of $j$. 
 
@@ -133,20 +133,19 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \label{meth:data}
 
     \paragraph{}
-    The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect each other's performance (lifetime reproductive success). This framework however, can be applied to data from any interacting elements (e.g. cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g. biomass), fecundity (e.g. number of eggs laid) or chemical production (e.g. oxygen). Second, these observations must also record the identity and abundance of elements which interact with each focal element. Lastly, observations should be replicated for each focal element with the aim to capture variation in the identities and densities of interaction partners. In addition to these requirements, the experimental design or data may also benefit from observations of focal elements with no interaction partners to better estimate intrinsic performance. \textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method. [[DBS: I have a suspicion that we would need to change things if the observations are not per capita...]]}
+    The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect each other's performance (lifetime reproductive success). Though we refer to system elements as species throughout this paper, this framework can be applied to data from any interacting group of elements (e.g. cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g. biomass), fecundity (e.g. number of eggs laid) or chemical production (e.g. oxygen). Second, these observations must also record the identity and abundance of elements which interact with each focal element. Lastly, observations should be replicated for each focal element with the aim to capture variation in the identities and densities of interaction partners. In addition to these requirements, the experimental design or data may also benefit from observations of focal elements with no interaction partners to better estimate intrinsic performance. 
+    %\textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method. [[DBS: I have a suspicion that we would need to change things if the observations are not per capita...]]}
 
     \paragraph{}
-    \textbf{
-    We define $s$ as the number of focal elements $i$, $i \in \{ 1, .., s \}$, and $t$ as the number of interacting elements $j$ across all $s$ focals, $j \in \{1, ..., t \}$. Typically not all elements in the system will be represented in the set of focals, such that $s \le t$. Measurements of the performance of individual units from each focal element (e.g.\ seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$. The abundances of interaction partners are stored in a matrix $X$, of size $n \times t$. When an element $j$ was absent for a given observation $p_k$, then $X_{k,j} = 0$. Finally, the element identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding element: $d_k \in \{1, ..., s \}$.}
+    We define $s$ as the number of focal species $i$, $i \in \{ 1, .., s \}$, and $t$ as the number of interacting species $j$ across all $s$ focals, $j \in \{1, ..., t \}$. Typically not all species in the system will be represented in the set of focals, such that $s \le t$. Measurements of the performance of individual units from each focal element (e.g.\ seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$ and indexed by $k$, with $k \in \{1, ..., n \}$. The abundances of interaction partners are stored in a matrix $X$, of size $n \times t$. When an element $j$ was absent for a given observation $p_k$, then $X_{k,j} = 0$. Finally, the species identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding species: $d_k \in \{1, ..., s \}$.
 
 
     \subsection{Identifying realised and unrealised interactions}
     \label{meth:id_params}
 
     \paragraph{}
-    \textbf{
     The aim of the joint framework is to estimate $B$, the $s \times t$ matrix of interactions between all focal elements $i$ and interacting elements $j$. [[DBS: Isn't it also to estimate the intercept? Or even better, to estimate the parameters of a model of density-dependent performance, full stop?]] The effect of element $j$ on the performance of focal element $i$ is noted as $\beta_{ij}$, corresponding to the $i$'th row and the $j$'th column of $B$. 
-    For an interaction $\beta_{ij}$ to be inferrable, and thus realised, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying abundances. Moreover, the vector of abundances of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of abundances of other elements interacting with $i$. For example, if two elements $a$ and $b$ interact with focal $i$ yet have the same abundance at every measurement or equally proportional abundances at every measurement, neither $\beta_{ia}$ nor $\beta_{ib}$ will be inferrable. We define \textit{realised} interactions as those which are inferrable following the above assumptions, and \textit{unrealised} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ parameter is realised, and $Q_{ij} = 0$ if not. How we to mathematically construct this $Q$ matrix is shared in the code attached to this paper (Supplementary Information XX).}
+    For an interaction $\beta_{ij}$ to be inferrable, and thus realised, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying abundances. Moreover, the vector of abundances of $j$ associated to measurements of focal $i$ must be linearly independent to all other vectors of abundances of other elements interacting with $i$. For example, if two elements $a$ and $b$ interact with focal $i$ yet have the same abundance at every measurement or equally proportional abundances at every measurement, neither $\beta_{ia}$ nor $\beta_{ib}$ will be inferrable. We define \textit{realised} interactions as those which are inferrable following the above assumptions, and \textit{unrealised} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{ij} = 1$ if the corresponding $\beta_{ij}$ parameter is realised, and $Q_{ij} = 0$ if not. How we to mathematically construct this $Q$ matrix is shared in the code for the publically available github repository associated to this paper.
 
     
     \subsection{Realised interactions}
